fix#6 약속 API 오류 수정 약속 생성시 500에러 수정, DB 초기화